@@ -136,7 +136,7 @@ vips_hist_ismonotonic_init( VipsHistIsmonotonic *ismonotonic )
 /**
  * vips_hist_ismonotonic:
  * @in: lookup-table to test
- * @monotonic: set non-zero if @in is monotonic 
+ * @out: set non-zero if @in is monotonic 
  * @...: %NULL-terminated list of optional named arguments
  *
  * Test @in for monotonicity. @out is set non-zero if @in is monotonic.
@@ -144,13 +144,13 @@ vips_hist_ismonotonic_init( VipsHistIsmonotonic *ismonotonic )
  * Returns: 0 on success, -1 on error
  */
 int 
-vips_hist_ismonotonic( VipsImage *in, gboolean *monotonic, ... )
+vips_hist_ismonotonic( VipsImage *in, gboolean *out, ... )
 {
 	va_list ap;
 	int result;
 
-	va_start( ap, monotonic );
-	result = vips_call_split( "hist_ismonotonic", ap, in, monotonic );
+	va_start( ap, out );
+	result = vips_call_split( "hist_ismonotonic", ap, in, out );
 	va_end( ap );
 
 	return( result );
